[package]
name = "universe"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
async-std = "1.9.0"
futures = "0.3.13"
hyper = "0.14"
rustc-hash = "1.1.0"